--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<input type="button" value="CREA" id="submit-btn">
 	</form>
 
-<table border="0" style="font-family: 'andale mono', monospace; color: #fff; font-weight: 400;  background-image: none; background-color: #0f1620;line-height: normal; box-sizing: border-box; margin: 0; padding: 0; border: none; border-collapse: collapse; border-spacing: 0; min-height: 100px;width: 770px;text-decoration: none;">
+<table border="0" style="font-family: 'andale mono', monospace; color: #fff; font-weight: 400;  background-image: none; background-color: #04173a;line-height: normal; box-sizing: border-box; margin: 0; padding: 0; border: none; border-collapse: collapse; border-spacing: 0; min-height: 100px;width: 770px;text-decoration: none;">
   <style >
     tbody {
       font-family: 'andale mono', monospace; 
@@ -104,7 +104,7 @@
       background-color: #04173a;
     }
     </style>  
-        <tbody class="back" style="background: #04173a center left;  background-size: auto; text-decoration: none; width: 770px;">
+        <tbody class="back" style="background-color: #04173a; background-position: center left;background-repeat: no-repeat;background-size: auto; text-decoration: none; width: 770px;">
           <tr class="name">
             <td style="background-color: #04173a;">&nbsp;</td>
             <td colspan="2">
