--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
               <p style="margin: 0; padding: 0; font-size:22px; color: #fff;"><b>Allineamento sistemi</b></p>
             </td>
             <!-- Доданий стовбець з об'єднаним рядком для картинки -->
-            <td rowspan="8" style="background-color: #04173a; margin-left: auto;"><img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AK7aPaCQ151nogvJldSJQbEYku2DKVdp-zYe6164B47ilYUJbO0jhZNTiGlSIBLGSetPX7vqqpAowSPjubSuJHn6eqE2NaQrbQ=w1920-h287" alt="Buon Natale" style="width:260px; height:260px;"></td>
+            <td rowspan="8" style="background-color: #04173a; margin-left: auto;">
+		    <!--<img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AK7aPaCQ151nogvJldSJQbEYku2DKVdp-zYe6164B47ilYUJbO0jhZNTiGlSIBLGSetPX7vqqpAowSPjubSuJHn6eqE2NaQrbQ=w1920-h287" alt="Buon Natale" style="width:260px; height:260px;">-->
+	    </td>
           </tr>
             <tr class="info tel-ing">
               <td class="one" style="width: 20px;background-color: #04173a;">
